# MaxFlowBenchmark

./: CMakeLists.txt  algos.cpp  algos.h  benchmark.sh  build.sh  dimacs_input.cpp  dimacs_input.h  distribution.h  main.cpp  random_util.cpp  random_util.h  scrpt.py
algorithms/: algorithm.cpp  algorithm.h  boykov_kolmogorov.cpp  boykov_kolmogorov.h  dinic_algo.cpp  dinic_algo.h  edmonds_carp.cpp  edmonds_carp.h  learning_augmented.cpp  learning_augmented.h  learning_augmented_add_edges.cpp  learning_augmented_add_edges.h  learning_augmented_add_edges_lemon.cpp  learning_augmented_add_edges_lemon.h  learning_augmented_lower_bounds_lemon.h  learning_augmented_paths_removal.cpp  learning_augmented_paths_removal.h  learning_augmented_paths_removal_lemon.cpp  learning_augmented_paths_removal_lemon.h  preflow.cpp  preflow.h  push_relabel.cpp  push_relabel.h
computed_results/: plot.py
computed_results/res_res_synth_250000_1049975_7s/: res_res_synth_250000_1049975_7s_0.0001.csv  res_res_synth_250000_1049975_7s_0.001.csv  res_res_synth_250000_1049975_7s_0.01.csv  res_res_synth_250000_1049975_7s_0.1.csv  res_res_synth_250000_1049975_7s_1.csv  res_res_synth_250000_1049975_7s_4.csv
data/: LB07-bunny-sml.sol  gensynth.py  preprocess_graph.py  preprocessed_flows.txt  test_graph.txt
data/genrmf/: genmain.c  genrmf  genrmf.c
learning/: learning.cpp  learning.h  random_util.cpp  random_util.h
